fix: fixed header z-index

--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -29,7 +29,6 @@ body {
 
 main{
   position: relative;
-  z-index: 1;
   background-color: var(--white);
 }
 
